# cppsh

./: .gitignore  CMakeLists.txt  Makefile  README.md  output.txt
doc/: technical_manual.md
include/: command.hpp  parse_exception.hpp  parser.hpp  pipeline.hpp  utils.hpp
lib/: command.cppm  parser.cpp  parsing.cppm  pipeline.cppm  utils.cpp  utils.cppm
src/: dispatcher.cpp  dispatcher.hpp  dispatching.cppm  execution.cppm  executor.cpp  main.cpp  shell.cpp  shell.cppm  shell.hpp  shell_errors.cppm  shell_state.cppm  signal_handling.cpp  signal_handling.cppm
src/commands/: command_entry.cppm  commands.hpp  entry.cppm  entry.hpp
src/commands/builtins/: cd.cpp  cd.cppm  cd.hpp  exit.cpp  exit.cppm  exit.hpp  help.cpp  help.cppm  history.cpp  history.cppm  history.hpp
src/commands/builtins/include/: exit.hpp  help.hpp
src/errors/: error_codes.hpp  shell_error.cpp  shell_error.hpp
src/include/: context.hpp  dispatcher.hpp  executor.hpp  icommand_registry.hpp  shell_state.cppm  signal_handling.hpp
tests/: dispatcher_test.cpp  error_test.cpp  parser_test.cpp  pipe_test.cpp
